--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.github.JavaCoDED78</groupId>
+    <groupId>io.github.javacoded78</groupId>
     <artifactId>jwt-humble</artifactId>
-    <version>0.1.0</version>
+    <version>1.0-SNAPSHOT</version>
     <name>${project.groupId}:${project.artifactId}</name>
-    <url>https://github.com/JavaCoDED78/jwt-humble/</url>
+    <description>JWT library for Java applications.</description>
+    <url>https://github.com/javacoded78/jwt-humble/</url>
     <inceptionYear>2024</inceptionYear>
     <licenses>
         <license>
@@ -22,17 +23,17 @@
     </developers>
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/JavaCoDED78/jwt-humble/issues</url>
+        <url>https://github.com/javacoded78/jwt-humble/issues</url>
     </issueManagement>
     <ciManagement>
         <system>GitHub Actions</system>
-        <url>https://github.com/JavaCoDED78/jwt-humble/actions</url>
+        <url>https://github.com/javacoded78/jwt-humble/actions</url>
     </ciManagement>
 
     <scm>
-        <connection>scm:git:git://github.com/JavaCoDED78/jwt-humble.git</connection>
-        <developerConnection>scm:git:ssh://github.com:JavaCoDED78/jwt-humble.git</developerConnection>
-        <url>https://github.com/JavaCoDED78/jwt-humble/tree/main</url>
+        <connection>scm:git:git://github.com/javacoded78/jwt-humble.git</connection>
+        <developerConnection>scm:git:ssh://github.com:javacoded78/jwt-humble.git</developerConnection>
+        <url>https://github.com/javacoded78/jwt-humble</url>
     </scm>
 
     <properties>
@@ -151,5 +152,86 @@
             </plugin>
         </plugins>
     </build>
-
+    <profiles>
+        <profile>
+            <id>release</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>gpg.keyname</name>
+                </property>
+            </activation>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>ossrh</id>
+                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+                </snapshotRepository>
+                <repository>
+                    <id>ossrh</id>
+                    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+            </distributionManagement>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>3.2.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.5.0</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <configuration>
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.13</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>ossrh</serverId>
+                            <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
