--- a/.rultor.yml
+++ b/.rultor.yml
@@ -4,12 +4,16 @@ assets:
   pubring.gpg: javacoded78/secrets#assets/pubring.gpg
 docker:
   image: l3r8y/rultor-image:1.0.3
+install: |
+  pdd --file=/dev/null
+merge:
+  script: |
+    mvn clean install -Pqulice --errors --batch-mode
 release:
   pre: false
-  sensetive:
-    - settings.xml
   script: |-
     [[ "${tag}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] || exit -1
-    mvn versions:set "-DnewVersion=${tag}"
+    mvn versions:set "-DnewVersion=${tag}" --batch-mode
     git commit -am "${tag}"
-    mvn clean deploy -P release --errors --settings ../settings.xml
+    mvn clean deploy -Pqulice -Psonatype -Pjcabi --batch-mode --errors --settings ../settings.xml
+    mvn clean site-deploy -Psite --errors --settings ../settings.xml --batch-mode
