--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jjwt.version>0.12.5</jjwt.version>
         <lombok.version>1.18.32</lombok.version>
+        <jedis.version>5.1.0</jedis.version>
         <checkstyle.version>3.2.2</checkstyle.version>
         <junit-version>5.10.2</junit-version>
         <jacoco.version>0.8.11</jacoco.version>
+        <jedis.version>5.1.0</jedis.version>
     </properties>
 
     <dependencies>
@@ -77,6 +79,11 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit-version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis.version}</version>
         </dependency>
     </dependencies>
     <build>
